Learning Project/src/objects/GMR_RAXA__c.object
<CustomObject>
    <fields>
        <fullName>manpower_person__c</fullName>
        <label>manpower_person</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systems_person__c</fullName>
        <label>systems person</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>training_person__c</fullName>
        <label>training_person</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>GMR RAXA</label>
    <listViews>
        <fullName>prac_queue_GMR_RAXA</fullName>
        <filterScope>Queue</filterScope>
        <label>prac queue</label>
        <queue>prac_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>practice_queue123_GMR_RAXA</fullName>
        <filterScope>Queue</filterScope>
        <label>practice queue123</label>
        <queue>practice_queue123</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>GMR RAXA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GMR RAXA</pluralLabel>
    <recordTypes>
        <fullName>manpower</fullName>
        <active>true</active>
        <label>manpower</label>
    </recordTypes>
    <recordTypes>
        <fullName>systems</fullName>
        <active>true</active>
        <label>systems</label>
    </recordTypes>
    <recordTypes>
        <fullName>training</fullName>
        <active>true</active>
        <label>training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>